API Create users with OIDC identities
