# swagger.json
@@ -1122,6 +1122,12 @@
                     "type": "integer",
                     "example": 3
                 },
+                "oidcIdentities": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/main.APIOIDCIdentitySpec"
+                    }
+                },
                 "password": {
                     "description": "Plaintext password",
                     "type": "string",
@@ -1247,6 +1253,19 @@
                 "userUuid": {
                     "type": "string",
                     "example": "918bd04e-1bc4-4ccd-860f-60c15c5f1cec"
+                }
+            }
+        },
+        "main.APIOIDCIdentitySpec": {
+            "type": "object",
+            "properties": {
+                "issuer": {
+                    "type": "string",
+                    "example": "https://idm.example.com/oauth2/openid/drasl"
+                },
+                "subject": {
+                    "type": "string",
+                    "example": "f85f8c18-9bdf-49ad-a76e-719f9ba3ed25"
                 }
             }
         },
